--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                 <div>
                     <!-- card -->
                 </div>
+                <div>
+                    <div>Load more</div>
+                </div>
             </div>
         </main>
 
