--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <title>Food_ninja</title>
 </head>
 
-<body>
+<body class="text-gray-600">
     <div>
         <div>
             <nav>
                 <div>
-                    <h1><a href="/">Food Ninja</a></h1>
+                    <h1 class="font-bold uppercase"><a href="/">Food Ninja</a></h1>
                 </div>
                 <ul>
-                    <li>
+                    <li class="text-gray-700 font-bold">
                         <a href="#">
                             <span>Home</span>
                         </a>
@@ -43,19 +43,19 @@
             </div>
 
             <header>
-                <h2>Racipies</h2>
-                <h3>For Ninjas</h3>
+                <h2 class="text-gray-700 text-6xl font-semibold">Racipies</h2>
+                <h3 class="text-2xl font-semibold">For Ninjas</h3>
             </header>
             <div>
-                <h4>Latest racipies</h4>
+                <h4 class="font-bold">Latest racipies</h4>
                 <div>
-                    <img src="" alt="">
+                    <img src="food1.png" alt="">
                 </div>
                 <div>
                     <span>food name</span>
                     <span>made by</span>
                 </div>
-                <h4>Most popular</h4>
+                <h4 class="font-bold">Most popular</h4>
                 <div>
                     <!-- card -->
                 </div>
