--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div>
             <nav>
                 <div>
-                    <h1 class="font-bold uppercase"><a href="/">Food Ninja</a></h1>
+                    <h1 class="font-bold uppercase p-4 border-b border-gary-100"><a href="/">Food Ninja</a></h1>
                 </div>
                 <ul>
                     <li class="text-gray-700 font-bold">
@@ -36,7 +36,7 @@
             </nav>
         </div>
         <!-- nav end -->
-        <main>
+        <main class="px-16 py-6">
             <div>
                 <a href="#">Sign in</a>
                 <a href="#">Sign up</a>
@@ -47,16 +47,16 @@
                 <h3 class="text-2xl font-semibold">For Ninjas</h3>
             </header>
             <div>
-                <h4 class="font-bold">Latest racipies</h4>
-                <div>
+                <h4 class="font-bold mt-12 pb-2 border-b border-gary-200">Latest racipies</h4>
+                <div class="mt-8">
                     <img src="food1.png" alt="">
                 </div>
                 <div>
                     <span>food name</span>
                     <span>made by</span>
                 </div>
-                <h4 class="font-bold">Most popular</h4>
-                <div>
+                <h4 class="font-bold mt-12 pb-2 border-b border-gary-200">Most popular</h4>
+                <div class="mt-8">
                     <!-- card -->
                 </div>
                 <div>
