--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         </div>
         <!-- nav end -->
         <main class="px-16 py-6">
-            <div>
+            <div class="flex justify-end text-red-500">
                 <a href="#">Sign in</a>
-                <a href="#">Sign up</a>
+                <a class="ml-2" href="#">Sign up</a>
             </div>
 
             <header>
@@ -59,7 +59,7 @@
                 <div class="mt-8">
                     <!-- card -->
                 </div>
-                <div>
+                <div class="flex justify-center">
                     <div>Load more</div>
                 </div>
             </div>
