--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <!-- nav end -->
         <main class="px-16 py-6">
-            <div class="flex justify-end text-red-500">
+            <div class="flex justify-center md:justify-end text-red-500">
                 <a href="#">Sign in</a>
                 <a class="ml-2" href="#">Sign up</a>
             </div>
