--- a/index.html
+++ b/index.html
@@ -49,20 +49,27 @@
             <div>
                 <h4 class="font-bold mt-12 pb-2 border-b border-gary-200">Latest racipies</h4>
                 <div class="mt-8">
-                    <img src="food1.png" alt="">
+                    <div class="bg-white rounded overflow-hidden shadow-md relative">
+                        <img class="w-full h-32 sm:h-48 object-cover" src="food1.png" alt="">
+
+                        <div>
+                            <span>food name</span>
+                            <span>made by</span>
+                            <div
+                                class="bg-red-200 twxt-xl uppercase font-bold  rounded-2xl p-2 absolute top-0 ml-2 mt-2">
+                                <span>25mins</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <h4 class="font-bold mt-12 pb-2 border-b border-gary-200">Most popular</h4>
+                    <div class="mt-8">
+                        <!-- card -->
+                    </div>
+                    <div class="flex justify-center">
+                        <div>Load more</div>
+                    </div>
                 </div>
-                <div>
-                    <span>food name</span>
-                    <span>made by</span>
-                </div>
-                <h4 class="font-bold mt-12 pb-2 border-b border-gary-200">Most popular</h4>
-                <div class="mt-8">
-                    <!-- card -->
-                </div>
-                <div class="flex justify-center">
-                    <div>Load more</div>
-                </div>
-            </div>
         </main>
 
 
