10th class done

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </nav>
         </div>
         <!-- nav end -->
-        <main class="px-16 py-6">
+        <main class="px-16 py-6 bg-gray-100">
             <div class="flex justify-center md:justify-end text-red-500">
                 <a href="#">Sign in</a>
                 <a class="ml-2" href="#">Sign up</a>
@@ -52,11 +52,11 @@
                     <div class="bg-white rounded overflow-hidden shadow-md relative">
                         <img class="w-full h-32 sm:h-48 object-cover" src="food1.png" alt="">
 
-                        <div>
-                            <span>food name</span>
-                            <span>made by</span>
+                        <div class="m-4">
+                            <span class="font-bold">Spicey Food</span>
+                            <span class="block text-gray-500 text-xs">Made by Rehana</span>
                             <div
-                                class="bg-red-200 twxt-xl uppercase font-bold  rounded-2xl p-2 absolute top-0 ml-2 mt-2">
+                                class="bg-yellow-100 twxt-xl uppercase font-bold  rounded-2xl p-2 absolute top-0 ml-2 mt-2">
                                 <span>25mins</span>
                             </div>
                         </div>
