--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body class="text-gray-600">
-    <div>
-        <div>
+    <div class="grid md:grid-cols-3">
+        <div class="md:col-span-1">
             <nav>
                 <div>
                     <h1 class="font-bold uppercase p-4 border-b border-gary-100"><a href="/">Food Ninja</a></h1>
@@ -36,7 +36,7 @@
             </nav>
         </div>
         <!-- nav end -->
-        <main class="px-16 py-6 bg-gray-100">
+        <main class="px-16 py-6 bg-gray-100 md:col-span-2">
             <div class="flex justify-center md:justify-end text-red-500">
                 <a href="#">Sign in</a>
                 <a class="ml-2" href="#">Sign up</a>
@@ -48,42 +48,42 @@
             </header>
             <div>
                 <h4 class="font-bold mt-12 pb-2 border-b border-gary-200">Latest racipies</h4>
-                <div class="mt-8">
+                <div class="mt-8 grid lg:grid-cols-3 gap-x-10">
                     <!-- card1 -->
-                    <div class="bg-white rounded overflow-hidden shadow-md relative">
+                    <div class="card relative">
                         <img class="w-full h-32 sm:h-48 object-cover" src="/images/food1.png" alt="">
 
                         <div class="m-4">
                             <span class="font-bold">Spicey Food</span>
                             <span class="block text-gray-500 text-xs">Made by Rehana</span>
                         </div>
-                        <div class="bg-yellow-100 twxt-xl uppercas font-bold rounded-2xl p-2 absolute top-0 ml-2 mt-2">
+                        <div class="badge">
                             <span>25mins</span>
                         </div>
                     </div>
 
                     <!-- card2 -->
-                    <div class="bg-white rounded overflow-hidden shadow-md relative">
+                    <div class="card">
                         <img class="w-full h-32 sm:h-48 object-cover" src="/images/food2.png" alt="">
 
                         <div class="m-4">
                             <span class="font-bold">Spicey Food</span>
                             <span class="block text-gray-500 text-xs">Made by Rehana</span>
                         </div>
-                        <div class="bg-yellow-100 twxt-xl uppercase font-bold rounded-2xl p-2 absolute top-0 ml-2 mt-2">
+                        <div class="badge">
                             <span>25mins</span>
                         </div>
                     </div>
 
                     <!-- card3 -->
-                    <div class="bg-white rounded overflow-hidden shadow-md relative">
+                    <div class="card">
                         <img class="w-full h-32 sm:h-48 object-cover" src="/images/food3.png" alt="">
 
                         <div class="m-4">
                             <span class="font-bold">Spicey Food</span>
                             <span class="block text-gray-500 text-xs">Made by Rehana</span>
                         </div>
-                        <div class="bg-yellow-100 twxt-xl uppercase font-bold rounded-2xl p-2 absolute top-0 ml-2 mt-2">
+                        <div class="badge">
                             <span>25mins</span>
                         </div>
                     </div>
