--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,8 @@
         <!-- nav end -->
         <main class="px-16 py-6 bg-gray-100 md:col-span-2">
             <div class="flex justify-center md:justify-end text-red-500">
-                <a href="#">Sign in</a>
-                <a class="ml-2" href="#">Sign up</a>
+                <a href="#" class="btn border-red-600 border-2">Sign in</a>
+                <a class="ml-2  btn border-red-600 border-2" href="#">Sign up</a>
             </div>
 
             <header>
@@ -95,7 +95,7 @@
                     <!-- card -->
                 </div>
                 <div class="flex justify-center">
-                    <div>Load more</div>
+                    <div class="btn bg-slate-200">Load more</div>
                 </div>
             </div>
         </main>
