15th class done

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
         <div class="md:col-span-1">
             <nav>
                 <div>
-                    <h1 class="font-bold uppercase p-4 border-b border-gary-100"><a href="/">Food Ninja</a></h1>
+                    <h1 class="font-bold uppercase p-4 border-b border-gary-100 hover:text-gray-300"><a href="/">Food
+                            Ninja</a></h1>
                 </div>
                 <ul>
                     <li class="text-gray-700 font-bold">
@@ -55,9 +56,9 @@
         </div>
         <!-- nav end -->
         <main class="px-16 py-6 bg-gray-100 md:col-span-2">
-            <div class="flex justify-center md:justify-end text-red-500">
-                <a href="#" class="btn border-red-600 border-2">Sign in</a>
-                <a class="ml-2  btn border-red-600 border-2" href="#">Sign up</a>
+            <div class="flex justify-center md:justify-end text-primary">
+                <a href="#" class="btn border-primary border-2 hover:bg-primary hover:text-white">Sign in</a>
+                <a class="ml-2  btn border-primary border-2 hover:bg-primary hover:text-white" href="#">Sign up</a>
             </div>
 
             <header>
@@ -68,7 +69,7 @@
                 <h4 class="font-bold mt-12 pb-2 border-b border-gary-200">Latest racipies</h4>
                 <div class="mt-8 grid lg:grid-cols-3 gap-x-10">
                     <!-- card1 -->
-                    <div class="card relative">
+                    <div class="card hover:shadow-lg relative">
                         <img class="w-full h-32 sm:h-48 object-cover" src="/images/food1.png" alt="">
 
                         <div class="m-4">
@@ -86,7 +87,7 @@
                     </div>
 
                     <!-- card2 -->
-                    <div class="card">
+                    <div class="card hover:shadow-lg">
                         <img class="w-full h-32 sm:h-48 object-cover" src="/images/food2.png" alt="">
 
                         <div class="m-4">
@@ -104,7 +105,7 @@
                     </div>
 
                     <!-- card3 -->
-                    <div class="card">
+                    <div class="card hover:shadow-lg">
                         <img class="w-full h-32 sm:h-48 object-cover" src="/images/food3.png" alt="">
 
                         <div class="m-4">
@@ -129,7 +130,7 @@
                     <!-- card -->
                 </div>
                 <div class="flex justify-center">
-                    <div class="btn bg-slate-200">Load more</div>
+                    <div class="btn bg-slate-200 hover:shadow-inner">Load more</div>
                 </div>
             </div>
         </main>
