--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,17 @@
 
 <body class="text-gray-600">
     <div class="grid md:grid-cols-3">
-        <div class="md:col-span-1">
-            <nav>
+        <div class="md:col-span-1 md:flex md:justify-end">
+            <nav class="text-end">
                 <div>
                     <h1 class="font-bold uppercase p-4 border-b border-gary-100 hover:text-gray-300"><a href="/">Food
                             Ninja</a></h1>
                 </div>
                 <ul>
-                    <li class="text-gray-700 font-bold">
-                        <a href="#">
+                    <li class="text-gray-700 font-bold border-r-4 py-1 border-primary">
+                        <a href="#" class="flex justify-end">
                             <span>Home</span>
-                            <svg class="w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                            <svg class="w-6 mx-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                 stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                     d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
@@ -29,10 +29,10 @@
 
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
+                    <li class="border-r-4 py-2 border-white">
+                        <a href="#" class="flex justify-end">
                             <span>About</span>
-                            <svg class="w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                            <svg class="w-6 mx-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                 stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                     d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9 5.25h.008v.008H12v-.008z" />
@@ -40,10 +40,10 @@
 
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
+                    <li class="border-r-4 py-2 border-white">
+                        <a href="#" class="flex justify-end">
                             <span>Contact</span>
-                            <svg class="w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                            <svg class="w-6 mx-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                 stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                     d="M21.75 9v.906a2.25 2.25 0 01-1.183 1.981l-6.478 3.488M2.25 9v.906a2.25 2.25 0 001.183 1.981l6.478 3.488m8.839 2.51l-4.66-2.51m0 0l-1.023-.55a2.25 2.25 0 00-2.134 0l-1.022.55m0 0l-4.661 2.51m16.5 1.615a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V8.844a2.25 2.25 0 011.183-1.98l7.5-4.04a2.25 2.25 0 012.134 0l7.5 4.04a2.25 2.25 0 011.183 1.98V19.5z" />
@@ -57,13 +57,13 @@
         <!-- nav end -->
         <main class="px-16 py-6 bg-gray-100 md:col-span-2">
             <div class="flex justify-center md:justify-end text-primary">
-                <a href="#" class="btn border-primary border-2 hover:bg-primary hover:text-white">Sign in</a>
-                <a class="ml-2  btn border-primary border-2 hover:bg-primary hover:text-white" href="#">Sign up</a>
+                <a href="#" class="btn border-primary md:border-2 hover:bg-primary hover:text-white">Sign in</a>
+                <a class="ml-2  btn border-primary md:border-2 hover:bg-primary hover:text-white" href="#">Sign up</a>
             </div>
 
             <header>
                 <h2 class="text-gray-700 text-6xl font-semibold">Racipies</h2>
-                <h3 class="text-2xl font-semibold">For Ninjas</h3>
+                <h3 class="text-2xl font-semibold my-3">For Ninjas</h3>
             </header>
             <div>
                 <h4 class="font-bold mt-12 pb-2 border-b border-gary-200">Latest racipies</h4>
