--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,19 @@
 <body class="text-gray-600">
     <div class="grid md:grid-cols-3">
         <div class="md:col-span-1 md:flex md:justify-end">
-            <nav class="text-end">
-                <div>
+            <nav class="text-right">
+                <div class="flex justify-between">
                     <h1 class="font-bold uppercase p-4 border-b border-gary-100 hover:text-gray-300"><a href="/">Food
-                            Ninja</a></h1>
+                            Ninja</a>
+                    </h1>
+                    <div>
+                        <svg class="w-6 md:hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                            stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M3.75 5.25h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5" />
+                        </svg>
+                    </div>
+
                 </div>
                 <ul>
                     <li class="text-gray-700 font-bold border-r-4 py-1 border-primary">
