responsive nav bar

--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,12 @@
                         <svg class="w-6 md:hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                             stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M3.75 5.25h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5" />
+                                d="M3.75 5.25h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5" id="burger" />
                         </svg>
                     </div>
 
                 </div>
-                <ul>
+                <ul class="hidden md:block" id="menu">
                     <li class="text-gray-700 font-bold border-r-4 py-1 border-primary">
                         <a href="#" class="flex justify-end">
                             <span>Home</span>
@@ -147,6 +147,8 @@
 
     </div>
 
+
+    <script src="index.js"></script>
 </body>
 
 </html>
