--- a/public/index.html
+++ b/public/index.html
@@ -66,8 +66,11 @@
         <!-- nav end -->
         <main class="px-16 py-6 bg-gray-100 md:col-span-2">
             <div class="flex justify-center md:justify-end text-primary">
-                <a href="#" class="btn border-primary md:border-2 hover:bg-primary hover:text-white">Sign in</a>
-                <a class="ml-2  btn border-primary md:border-2 hover:bg-primary hover:text-white" href="#">Sign up</a>
+                <a href="#"
+                    class="btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-500">Sign
+                    in</a>
+                <a class="ml-2  btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-500"
+                    href="#">Sign up</a>
             </div>
 
             <header>
@@ -139,7 +142,7 @@
                     <!-- card -->
                 </div>
                 <div class="flex justify-center">
-                    <div class="btn bg-slate-200 hover:shadow-inner">Load more</div>
+                    <div class="btn bg-slate-200 hover:shadow-inner transform hover:scale-125">Load more</div>
                 </div>
             </div>
         </main>
