--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,10 @@
                     <!-- card -->
                 </div>
                 <div class="flex justify-center">
-                    <div class="btn bg-slate-200 hover:shadow-inner transform hover:scale-125">Load more</div>
+                    <div
+                        class="btn bg-slate-200 hover:shadow-inner transform hover:scale-110 hover:bg-opacity-10 transition ease-out duration-300">
+                        Load
+                        more</div>
                 </div>
             </div>
         </main>
