--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
     <title>Food_ninja</title>
 </head>
 
-<body class="text-gray-600">
+<body class="text-gray-600 font-body">
     <div class="grid md:grid-cols-3">
         <div class="md:col-span-1 md:flex md:justify-end">
             <nav class="text-right">
                 <div class="flex justify-between">
-                    <h1 class="font-bold uppercase p-4 border-b border-gary-100 hover:text-gray-300"><a href="/">Food
+                    <h1 class="font-bold uppercase p-4 border-b border-gary-100 hover:text-gray-400"><a href="/">Food
                             Ninja</a>
                     </h1>
                     <div>
@@ -28,7 +28,7 @@
                 </div>
                 <ul class="hidden md:block" id="menu">
                     <li class="text-gray-700 font-bold border-r-4 py-1 border-primary">
-                        <a href="#" class="flex justify-end">
+                        <a href="#" class="flex justify-end py-2">
                             <span>Home</span>
                             <svg class="w-6 mx-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                 stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -85,8 +85,8 @@
                         <img class="w-full h-32 sm:h-48 object-cover" src="/images/food1.png" alt="">
 
                         <div class="m-4">
-                            <span class="font-bold">Spicey Food</span>
-                            <span class="block text-gray-500 text-xs">Made by Rehana</span>
+                            <span class="font-bold">Asocena</span>
+                            <span class="block text-gray-500 text-xs">Made by Rehan Malik</span>
                         </div>
                         <div class="badge">
                             <svg class="inline-block w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -103,8 +103,8 @@
                         <img class="w-full h-32 sm:h-48 object-cover" src="/images/food2.png" alt="">
 
                         <div class="m-4">
-                            <span class="font-bold">Spicey Food</span>
-                            <span class="block text-gray-500 text-xs">Made by Rehana</span>
+                            <span class="font-bold">Biriyani</span>
+                            <span class="block text-gray-500 text-xs">Made by Afsana Sarkar</span>
                         </div>
                         <div class="badge">
                             <svg class="inline-block w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -112,7 +112,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                     d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z" />
                             </svg>
-                            <span>25mins</span>
+                            <span>30mins</span>
                         </div>
                     </div>
 
@@ -121,8 +121,8 @@
                         <img class="w-full h-32 sm:h-48 object-cover" src="/images/food3.png" alt="">
 
                         <div class="m-4">
-                            <span class="font-bold">Spicey Food</span>
-                            <span class="block text-gray-500 text-xs">Made by Rehana</span>
+                            <span class="font-bold">Custards</span>
+                            <span class="block text-gray-500 text-xs">Made by Firoz Ahmed</span>
                         </div>
                         <div class="badge">
                             <svg class="inline-block w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -131,7 +131,7 @@
                                     d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z" />
                             </svg>
 
-                            <span>25mins</span>
+                            <span>30mins</span>
                         </div>
                     </div>
 
